--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,24 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.ads": "4.12.0",
+    "com.unity.collab-proxy": "2.0.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.purchasing": "4.12.2",
+    "com.unity.purchasing.udp": "2.2.5",
+    "com.unity.remote-config": "4.1.1",
+    "com.unity.services.analytics": "6.0.2",
+    "com.unity.services.authentication": "3.3.3",
+    "com.unity.services.ccd.management": "2.2.2",
+    "com.unity.services.cloud-build": "1.0.5",
+    "com.unity.services.cloud-diagnostics": "1.0.10",
+    "com.unity.services.cloudcode": "2.7.1",
+    "com.unity.services.cloudsave": "3.2.0",
+    "com.unity.services.deployment": "1.3.0",
+    "com.unity.services.economy": "3.4.1",
+    "com.unity.services.leaderboards": "2.1.0",
+    "com.unity.services.levelplay": "8.4.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
